--- a/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
+++ b/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
@@ -30,11 +30,11 @@
       display: grid;
       grid-auto-flow: column;
       grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 48px);
+      grid-template-rows: repeat(2, $gap-xxxl);
 
       &:has(:nth-child(5)) {
-        grid-template-columns: auto;
-        grid-template-rows: repeat(auto-fit, 48px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, $gap-xxxl);
       }
     }
 
